add rating display

--- a/src/app/header/cart-dialog/cart-dialog.component.html
+++ b/src/app/header/cart-dialog/cart-dialog.component.html
@@ -31,7 +31,7 @@
     <div class="actions">
       <div class="action clickable" [routerLink]="'Cart'" mat-dialog-close>Cart</div>
       <div class="action clickable" [routerLink]="'Checkout'" mat-dialog-close>Checkout</div>
-      <div class="action clickable">Comparison</div>
+      <div class="action clickable" [routerLink]="'ProductComparison'" mat-dialog-close>Comparison</div>
     </div>
 
   </div>
