swap shortDescription and briefDescription

--- a/src/app/main/defaultUser/product/product.component.html
+++ b/src/app/main/defaultUser/product/product.component.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="shortDescription">
-                {{data.shortDescription}}
+                {{data.briefDescription}}
 
             </div>
             <div class="select">
