--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,7 +8,7 @@
                 {{i.name}}
             </div>
             <div class="shortDescription">
-                {{i.briefDescription}}
+                {{i.shortDescription}}
             </div>
             <div class="price">
                 <span class="currentPrice" *ngIf="i.hasDiscount">
