--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -42,6 +42,9 @@ $primary: #B88E2F;
             .title {
                 font-size: 24px;
                 font-weight: 600;
+                text-wrap: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
 
             .shortDescription {
@@ -73,7 +76,8 @@ $primary: #B88E2F;
             }
         }
 
-        .discountBadge, .newBadge{
+        .discountBadge,
+        .newBadge {
             position: absolute;
             display: flex;
             justify-content: center;
@@ -124,7 +128,8 @@ $primary: #B88E2F;
                 color: $primary;
                 background-color: $white;
                 transition-duration: 0.3s;
-                &:hover{
+
+                &:hover {
                     background-color: transparentize($color: $white, $amount: 0.15);
                 }
             }
@@ -143,13 +148,14 @@ $primary: #B88E2F;
                     font-weight: 600;
                     line-height: 150%;
                     color: $white;
-                    
+
                     margin-left: 20px;
 
                     &:first-child {
                         margin-left: 0px;
                     }
-                    &::after{
+
+                    &::after {
                         content: '';
                         position: absolute;
                         height: 1px;
@@ -157,11 +163,12 @@ $primary: #B88E2F;
                         width: 100%;
                         transition-duration: 0.3s;
                     }
-                    &:hover{
-                        &::after{
+
+                    &:hover {
+                        &::after {
                             background-color: $white;
                         }
-                        
+
                     }
                 }
 
