fix product list

--- a/src/app/header/cart-dialog/cart-dialog.component.scss
+++ b/src/app/header/cart-dialog/cart-dialog.component.scss
@@ -42,7 +42,7 @@
     padding: 0px;
     padding-top: 42px;
     padding-bottom: 20px;
-
+    scrollbar-gutter: stable both-edges;
     li {
         display: flex;
         flex-direction: row;
