--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -32,6 +32,8 @@ $primary: #B88E2F;
 
             img {
                 object-fit: cover;
+                width: 100%;
+                height: 100%;
             }
         }
 
