--- a/src/app/main/defaultUser/shop/shop.component.html
+++ b/src/app/main/defaultUser/shop/shop.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="productRange">
-            Showing {{(currentPage - 1) * pRangeSelected + 1}}–{{currentPage * pRangeSelected}} of {{($data | async)?.total}} results
+            Showing {{(currentPage - 1) * pRangeSelected + 1}}–{{currentPage * pRangeSelected}} of {{totalResultsNumber}} results
         </div>
     </div>
     <div class="rightSide">
@@ -39,8 +39,8 @@
    <!-- add fileter -->
     </div>
     <div class="rightSide">
-        <app-product-list *ngIf="$data" [data]="($data | async)?.cards" [quantity]=pRangeSelected></app-product-list>
-        <div class="pagination" *ngIf="$data | async">
+        <app-product-list *ngIf="products" [data]="products" [quantity]=pRangeSelected></app-product-list>
+        <div class="pagination" *ngIf="products">
             <div class="page previous clickable" *ngIf="currentPage !== 1" (click)="changePage(currentPage-1)">
                 Previous
             </div>
