Shop Component: fix product range

--- a/src/app/main/defaultUser/shop/shop.component.html
+++ b/src/app/main/defaultUser/shop/shop.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="productRange">
-            Showing {{(currentPage - 1) * pRangeSelected + 1}}–{{currentPage * pRangeSelected}} of {{totalResultsNumber}} results
+            Showing {{(currentPage - 1) * pRangeSelected + 1}}–{{getProductRangeLimit(currentPage * pRangeSelected)}} of {{totalResultsNumber}} results
         </div>
     </div>
     <div class="rightSide">
